--- a/badges.css
+++ b/badges.css
@@ -349,6 +349,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="3610793"] .badge-box .bdg {
+    background: url(https://i.imgur.com/oj8wGxH.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
