--- a/badges.css
+++ b/badges.css
@@ -125,7 +125,7 @@
 }
 
 #chat-messages [data-cid|="4433114"] .badge-box .bdg {
-    background: url(https://techcrunch.com/wp-content/uploads/2015/08/safe_image.gif) center no-repeat!important;
+    background: url(https://gifimage.net/wp-content/uploads/2017/11/initial-d-gif-4.gif) center no-repeat!important;
     background-size: cover!important
 }
 
