--- a/badges.css
+++ b/badges.css
@@ -120,7 +120,7 @@
 }
 
 #chat-messages [data-cid|="16760700"] .badge-box .bdg {
-    background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQV59RPL5V2h0Y8TwwYSRF8x3p7z5gj4h_81uQ5O-QSGxnQTW3zSA) center no-repeat!important;
+    background: url(https://pa1.narvii.com/6645/66d2ad26be02f9c6b16e233d435e44a496754fab_hq.gif) center no-repeat!important;
     background-size: cover!important
 }
 
