--- a/badges.css
+++ b/badges.css
@@ -120,7 +120,7 @@
 }
 
 #chat-messages [data-cid|="16760700"] .badge-box .bdg {
-    background: url(https://pa1.narvii.com/6645/66d2ad26be02f9c6b16e233d435e44a496754fab_hq.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/M7oTmEa.gif) center no-repeat!important;
     background-size: cover!important
 }
 
