--- a/badges.css
+++ b/badges.css
@@ -160,7 +160,7 @@
 }
 
 #chat-messages [data-cid|="4667154"] .badge-box .bdg {
-    background: url(https://goo.gl/1SC6cF) center no-repeat!important;
+    background: url(https://i.imgur.com/jyTj0Lf.png) center no-repeat!important;
     background-size: cover!important
 }
 
