--- a/badges.css
+++ b/badges.css
@@ -345,7 +345,7 @@
 }
 
 #chat-messages [data-cid|="50793269"] .badge-box .bdg {
-    background: url(i.imgur.com/hF97bio.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/r5atnMR.gif) center no-repeat!important;
     background-size: cover!important
 }
 
