--- a/badges.css
+++ b/badges.css
@@ -350,7 +350,7 @@
 }
 
 #chat-messages [data-cid|="50793269"] .badge-box .bdg {
-    background: url(https://i.imgur.com/r5atnMR.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/Y9fiiyU.gif) center no-repeat!important;
     background-size: cover!important
 }
 
