--- a/badges.css
+++ b/badges.css
@@ -364,6 +364,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="4467092"] .badge-box .bdg {
+    background: url(https://i.imgur.com/5KlZdcs.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
