--- a/badges.css
+++ b/badges.css
@@ -369,6 +369,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="6312004"] .badge-box .bdg {
+    background: url(https://media.discordapp.net/attachments/432662363121123328/701874238499586078/ezgif-3-c7b16b209d59.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
