--- a/badges.css
+++ b/badges.css
@@ -230,7 +230,7 @@
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
-    background: url(https://i.imgur.com/NvT0QMG.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/ywtAfKN.jpg) center no-repeat!important;
     background-size: cover!important
 }
 
